Fixed spacing for standard example

--- a/css/common.scss
+++ b/css/common.scss
@@ -53,7 +53,7 @@ div.dtsb-searchBuilder {
             -ms-transform: rotate(90deg);
             transform: rotate(90deg);
             position: absolute;
-            margin-top: 5px;
+            margin-top: 10px;
             margin-right: 10px;
         }
 
